.opam/default/.opam-switch/sources/sail_ocaml_backend.0.20.1/test/typecheck/fail/private_clause.sail
$option --dallow-internal
default Order dec

$include <prelude.sail>

function private foo() -> unit = ()
